<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.pixelmags.android.pixelmagsapp.ui.RegisterFragment"
    android:background="#EDEDED"
    android:id="@+id/fragment_register">

    <!--
    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
        android:text="@string/register_fragment" />
   -->


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerFirstName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:hint="@string/hint_first_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerLastName"
        android:layout_below="@+id/registerFirstName"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_last_name" />

<!--
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/registerLastName"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_last_name" />
-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/registerDateOfBirth"
        android:layout_below="@+id/registerLastName"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_date_of_birth" />





    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/registerEmail"
        android:layout_below="@+id/registerDateOfBirth"
        android:layout_alignLeft="@+id/registerDateOfBirth"
        android:layout_alignStart="@+id/registerDateOfBirth"
        android:hint="@string/hint_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword"
        android:layout_below="@+id/registerEmail"
        android:layout_alignLeft="@+id/registerEmail"
        android:layout_alignStart="@+id/registerEmail"
        android:hint="@string/hint_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerConfirmPassword"
        android:layout_below="@+id/registerPassword"
        android:layout_alignLeft="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassword"
        android:hint="@string/hint_confirm_password" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_terms_and_conditions"
        android:id="@+id/registerAcceptTermsConditions"
        android:layout_below="@+id/registerConfirmPassword"
        android:layout_alignLeft="@+id/registerConfirmPassword"
        android:layout_alignStart="@+id/registerConfirmPassword"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_register"
        android:id="@+id/registerDoRegister"
        android:layout_below="@+id/registerAcceptTermsConditions"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
